# demo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
samples/: test_data.csv
src/carsengage2022/: __init__.py  runner.py  skeleton.py
src/carsengage2022/models/: kmc.py
src/carsengage2022/preprocessing/: data_cleaning.py  importLib.py  information.py  pre_processor.py
tests/: conftest.py  data_cleaning_spec.py  test_skeleton.py
